# spicekit

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-NOTICES  README.md
.github/workflows/: bench.yml  ci.yml  release.yml
crates/spicekit/: Cargo.toml
crates/spicekit-bench/: Cargo.toml
crates/spicekit-bench/src/: cspice_wrap.rs  kernels.rs  lib.rs  main.rs
crates/spicekit-bench/tests/: parity.rs
crates/spicekit-py/: Cargo.toml  LICENSE  README.md  pyproject.toml
crates/spicekit-py/examples/: read_spk.py
crates/spicekit-py/python/spicekit/: __init__.py  __init__.pyi
crates/spicekit-py/src/: lib.rs
crates/spicekit-py/tests/: conftest.py  test_names.py  test_pck.py  test_spk.py  test_spk_writer.py  test_text_kernel.py
crates/spicekit/examples/: read_spk.rs
crates/spicekit/src/: daf.rs  frame.rs  lib.rs  naif_builtin_table.rs  naif_ids.rs  pck.rs  spk.rs  spk_writer.rs  text_kernel.rs
src/: naif_builtin_table.rs  naif_ids.rs  pck.rs  spk.rs  spk_writer.rs  text_kernel.rs
