[package]
name = "spicekit"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust reader for NASA/NAIF SPICE kernel formats (DAF, SPK, PCK, text kernels). Independent of the CSpice toolkit."
license = "MIT"
repository = "https://github.com/B612-Asteroid-Institute/spicekit"
readme = "README.md"
keywords = ["spice", "naif", "astronomy", "ephemeris", "astrodynamics"]
categories = ["science", "aerospace", "parser-implementations"]

[lib]
path = "src/lib.rs"

[dependencies]
memmap2 = "0.9"
rayon = "1.11"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3"
